--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script src="./script.js"></script>
 </head>
 <body>
     <header class="container mx-auto">
@@ -29,11 +28,70 @@
 
     <main class="container mx-auto">
         <div>
-            <button class="bg-black text-white px-5 py-2" id="all-filter-btn">All</button>
-            <button class="bg-gray-400 px-5 py-2" id="interview-filter-btn">Interview</button>
-            <button class="bg-gray-400 px-5 py-2" id="rejected-filter-btn">Rejected</button>
+            <button onclick="toggleStyle('all-filter-btn')" class="bg-black text-white px-5 py-2" id="all-filter-btn">All</button>
+            <button onclick="toggleStyle('interview-filter-btn')" class="bg-gray-400 px-5 py-2" id="interview-filter-btn">Interview</button>
+            <button onclick="toggleStyle('rejected-filter-btn')" class="bg-gray-400 px-5 py-2" id="rejected-filter-btn">Rejected</button>
+        </div>
+        <section id="filter-section" class="hidden">
+
+        </section>
+        <div id="cards">
+            <!-- card 1 -->
+            <div class="card flex justify-between border p-8">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">Wordpress Developer</p>
+                        <p class="job-subtitle">Wordpress theme and plugin Developer</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$500</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not applicable</p>
+                     <p class="short-des">New leaf unfurling by the east window.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn bg-green-200 px-4 py-2">Interview</button>
+                        <button class="rejected-btn bg-red-200 px-4 py-2">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn bg-red-200 text-red-600 px-4 py-2">Delete</button>
+                </div>
+            </div>
+            <!-- card 2 -->
+            <div class="card flex justify-between border p-8">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">Wordpress Developer 2</p>
+                        <p class="job-subtitle">Wordpress theme and plugin Developer</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$500</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not applicable</p>
+                     <p class="short-des">New leaf unfurling by the east window.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn bg-green-200 px-4 py-2">Interview</button>
+                        <button class="rejected-btn bg-red-200 px-4 py-2">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn bg-red-200 text-red-600 px-4 py-2">Delete</button>
+                </div>
+            </div>
+
         </div>
 
     </main>
+    <script src="./script.js"></script>
 </body>
 </html>
