--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <header class="container mx-auto">
+    <header class="container mx-auto my-5">
         <h1 class="text-4xl text-black">Job Dashboard</h1>
         <div class="grid grid-cols-3 gap-6 my-6">
-            <div class="p-6 bg-purple-200 rounded-2xl">
+            <div class="p-6 bg-gray-200 rounded-2xl flex flex-col gap-3">
                 <h3>Total</h3>
                 <p id="totalCount">0</p>
             </div>
-            <div class="p-6 bg-purple-200 rounded-2xl">
+            <div class="p-6 bg-green-200 rounded-2xl flex flex-col gap-3">
                 <h3>Interview</h3>
                 <p id="interviewCount">0</p>
             </div>
-            <div class="p-6 bg-purple-200 rounded-2xl">
+            <div class="p-6 bg-red-100 rounded-2xl flex flex-col gap-3">
                 <h3>Rejected</h3>
                 <p id="rejectedCount">0</p>
             </div>
@@ -27,15 +27,15 @@
     <hr class="my-5">
 
     <main class="container mx-auto">
-        <div>
-            <button onclick="toggleStyle('all-filter-btn')" class="bg-black text-white px-5 py-2" id="all-filter-btn">All</button>
-            <button onclick="toggleStyle('interview-filter-btn')" class="bg-gray-400 px-5 py-2" id="interview-filter-btn">Interview</button>
-            <button onclick="toggleStyle('rejected-filter-btn')" class="bg-gray-400 px-5 py-2" id="rejected-filter-btn">Rejected</button>
+        <div class="mb-8">
+            <button onclick="toggleStyle('all-filter-btn')" class="bg-black text-white px-5 py-2 rounded-full" id="all-filter-btn">All</button>
+            <button onclick="toggleStyle('interview-filter-btn')" class="bg-gray-300 px-5 py-2 rounded-full" id="interview-filter-btn">Interview</button>
+            <button onclick="toggleStyle('rejected-filter-btn')" class="bg-gray-300 px-5 py-2 rounded-full" id="rejected-filter-btn">Rejected</button>
         </div>
         <section id="filter-section" class="hidden">
 
         </section>
-        <div id="cards">
+        <div id="cards" class="flex flex-col gap-6">
             <!-- card 1 -->
             <div class="card flex justify-between border p-8">
                 <div class="space-y-4">
