--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Dashboard</title>
+    <title>Job Application Tracker</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
     <header class="container mx-auto my-5">
-        <h1 class="text-4xl text-black">Job Dashboard</h1>
+        <h1 class="text-4xl text-black">Job Application Tracker</h1>
         <div class="grid grid-cols-3 gap-6 my-6">
             <div class="p-6 bg-gray-200 rounded-2xl flex flex-col gap-3">
                 <h3>Total</h3>
@@ -27,17 +32,17 @@
     <hr class="my-5">
 
     <main class="container mx-auto">
-        <div class="mb-8">
-            <button onclick="toggleStyle('all-filter-btn')" class="bg-black text-white px-5 py-2 rounded-full" id="all-filter-btn">All</button>
-            <button onclick="toggleStyle('interview-filter-btn')" class="bg-gray-300 px-5 py-2 rounded-full" id="interview-filter-btn">Interview</button>
-            <button onclick="toggleStyle('rejected-filter-btn')" class="bg-gray-300 px-5 py-2 rounded-full" id="rejected-filter-btn">Rejected</button>
+        <div class="mb-8 flex gap-4">
+            <button onclick="toggleStyle('all-filter-btn')" class="bg-black text-white px-5 py-2 rounded-[8px]" id="all-filter-btn">All</button>
+            <button onclick="toggleStyle('interview-filter-btn')" class="bg-gray-300 px-5 py-2 rounded-[8px]" id="interview-filter-btn">Interview</button>
+            <button onclick="toggleStyle('rejected-filter-btn')" class="bg-gray-300 px-5 py-2 rounded-[8px]" id="rejected-filter-btn">Rejected</button>
         </div>
         <section id="filter-section" class="hidden">
 
         </section>
         <div id="cards" class="flex flex-col gap-6">
             <!-- card 1 -->
-            <div class="card flex justify-between border p-8">
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
                 <div class="space-y-4">
                     <div>
                         <p class="job-title text-2xl">Wordpress Developer</p>
@@ -54,12 +59,12 @@
                      <p class="short-des">New leaf unfurling by the east window.</p>
 
                      <div class="flex gap-5">
-                        <button class="interview-btn bg-green-200 px-4 py-2">Interview</button>
-                        <button class="rejected-btn bg-red-200 px-4 py-2">Rejected</button>
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
                      </div>
                 </div>
                 <div>
-                    <button class="delete-btn bg-red-200 text-red-600 px-4 py-2">Delete</button>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
                 </div>
             </div>
             <!-- card 2 -->
