--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Job Application Tracker</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
@@ -45,18 +45,18 @@
             <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
                 <div class="space-y-4">
                     <div>
-                        <p class="job-title text-2xl">Wordpress Developer</p>
-                        <p class="job-subtitle">Wordpress theme and plugin Developer</p>
+                        <p class="job-title text-2xl">Frontend Developer</p>
+                        <p class="job-subtitle">React, JavaScript, Tailwind</p>
                     </div>
                     <div class="flex gap-2">
                         <p class="working-location">Remote</p>
                         <p>-</p>
                         <p class="job-type">Fulltime</p>
                         <p>-</p>
-                        <p class="job-salery">$500</p>
+                        <p class="job-salery">$1500</p>
                     </div>
-                     <p class="job-status bg-gray-200 px-4 py-2" >Not applicable</p>
-                     <p class="short-des">New leaf unfurling by the east window.</p>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">Building smooth user experiences with clean UI.</p>
 
                      <div class="flex gap-5">
                         <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
@@ -67,30 +67,179 @@
                     <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
                 </div>
             </div>
-            <!-- card 2 -->
-            <div class="card flex justify-between border p-8">
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
                 <div class="space-y-4">
                     <div>
-                        <p class="job-title text-2xl">Wordpress Developer 2</p>
-                        <p class="job-subtitle">Wordpress theme and plugin Developer</p>
+                        <p class="job-title text-2xl">Backend Developer</p>
+                        <p class="job-subtitle">Node.js, Express, MongoDB</p>
                     </div>
                     <div class="flex gap-2">
                         <p class="working-location">Remote</p>
                         <p>-</p>
                         <p class="job-type">Fulltime</p>
                         <p>-</p>
-                        <p class="job-salery">$500</p>
+                        <p class="job-salery">$2000</p>
                     </div>
-                     <p class="job-status bg-gray-200 px-4 py-2" >Not applicable</p>
-                     <p class="short-des">New leaf unfurling by the east window.</p>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">APIs power the backbone of modern apps.</p>
 
                      <div class="flex gap-5">
-                        <button class="interview-btn bg-green-200 px-4 py-2">Interview</button>
-                        <button class="rejected-btn bg-red-200 px-4 py-2">Rejected</button>
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
                      </div>
                 </div>
                 <div>
-                    <button class="delete-btn bg-red-200 text-red-600 px-4 py-2">Delete</button>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
+                </div>
+            </div>
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">Wordpress Developer</p>
+                        <p class="job-subtitle">Theme & Plugin Customization</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$1500</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">Custom solutions for scalable WordPress sites.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
+                </div>
+            </div>
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">UI/UX Designer</p>
+                        <p class="job-subtitle">Figma, Adobe XD</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$1200</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">Design is intelligence made visible.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
+                </div>
+            </div>
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">Mobile App Developer</p>
+                        <p class="job-subtitle">Flutter, Dart</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$2000</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">Cross-platform apps with native performance.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
+                </div>
+            </div>
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">Digital Marketing Specialist</p>
+                        <p class="job-subtitle">SEO, Facebook Ads, Google Ads</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$1000</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">Driving growth through data-driven marketing.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
+                </div>
+            </div>
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">DevOps Engineer</p>
+                        <p class="job-subtitle">AWS, Docker, CI/CD</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$2000</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">Automating deployment and scaling infrastructure.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
+                </div>
+            </div>
+            <div class="card flex justify-between bg-gray-200 p-8 rounded-2xl">
+                <div class="space-y-4">
+                    <div>
+                        <p class="job-title text-2xl">QA Engineer</p>
+                        <p class="job-subtitle">Manual & Automated Testing</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <p class="working-location">Remote</p>
+                        <p>-</p>
+                        <p class="job-type">Fulltime</p>
+                        <p>-</p>
+                        <p class="job-salery">$1500</p>
+                    </div>
+                     <p class="job-status bg-gray-200 px-4 py-2" >Not Applied</p>
+                     <p class="short-des">Quality is never an accident.</p>
+
+                     <div class="flex gap-5">
+                        <button class="interview-btn border-3 border-green-500 text-green-500 px-6 py-2 rounded-[8px] cursor-pointer">Interview</button>
+                        <button class="rejected-btn border-3 border-red-500 text-red-500 px-6 py-2 rounded-[8px] cursor-pointer">Rejected</button>
+                     </div>
+                </div>
+                <div>
+                    <button class="delete-btn text-black border-2 p-2 aspect-square rounded-[8px] cursor-pointer"><i class="fa-regular fa-trash-can"></i></i></button>
                 </div>
             </div>
 
